--- a/back/package.json
+++ b/back/package.json
@@ -10,13 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "6.6.0",
+    "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "4.x.x",
+    "express-rate-limit": "7.5.0",
+    "helmet": "8.1.0",
+    "jsonwebtoken": "9.0.2",
+    "morgan": "1.10.0",
     "tsconfig-paths": "4.2.0"
   },
   "devDependencies": {
+    "@types/cors": "2.8.17",
     "@types/dotenv": "6.1.1",
     "@types/express": "5.0.1",
+    "@types/jsonwebtoken": "9.0.9",
+    "@types/morgan": "1.9.9",
     "prisma": "6.6.0",
     "ts-node": "10.9.2",
     "typescript": "5.8.3"
