--- a/front/package.json
+++ b/front/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-slot": "1.1.2",
     "@react-three/drei": "10.0.3",
     "@react-three/fiber": "9.0.4",
+    "@tanstack/react-query": "5.74.3",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "@types/three": "0.174.0",
     "autoprefixer": "10.4.20",
+    "axios": "1.8.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "embla-carousel-autoplay": "8.6.0",
@@ -39,7 +41,8 @@
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
     "three": "0.174.0",
-    "valtio": "2.1.3"
+    "valtio": "2.1.3",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
     "@types/node": "22.13.1",
