--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@deemlol/next-icons": "0.1.9",
     "@gsap/react": "2.1.2",
+    "@radix-ui/react-dialog": "1.1.7",
+    "@radix-ui/react-separator": "1.1.3",
     "@radix-ui/react-slot": "1.2.0",
+    "@radix-ui/react-tooltip": "1.2.0",
     "@react-three/drei": "10.0.3",
     "@react-three/fiber": "9.0.4",
     "@tanstack/react-query": "5.74.3",
@@ -31,7 +34,7 @@
     "gsap": "3.12.7",
     "lenis": "1.2.3",
     "lodash": "4.17.21",
-    "lucide-react": "0.474.0",
+    "lucide-react": "0.488.0",
     "maath": "0.10.8",
     "next": "15.1.6",
     "postcss": "8.5.1",
