--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -2,14 +2,10 @@
   "compilerOptions": {
     // paths가 생성할때 없어서 global.css에서 경로에러
     "paths": {
-        "@*" : ["./*"],
+      "@*": ["./*"]
     },
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -31,9 +27,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "app/components/ui/three.js/main2.tsx"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "**/*.tsx",
+    "app/components/ui/three.js/main2.tsx"
+  ],
+  "exclude": ["node_modules"]
 }
