--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@deemlol/next-icons": "0.1.9",
+    "@dnd-kit/core": "6.3.1",
     "@gsap/react": "2.1.2",
     "@radix-ui/react-avatar": "1.1.4",
     "@radix-ui/react-collapsible": "1.1.4",
@@ -25,6 +26,7 @@
     "@react-three/drei": "10.0.3",
     "@react-three/fiber": "9.0.4",
     "@tanstack/react-query": "5.74.3",
+    "@tanstack/react-table": "8.21.3",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "@types/three": "0.174.0",
@@ -38,12 +40,13 @@
     "gsap": "3.12.7",
     "lenis": "1.2.3",
     "lodash": "4.17.21",
-    "lucide-react": "0.488.0",
+    "lucide-react": "0.503.0",
     "maath": "0.10.8",
     "next": "15.1.6",
     "postcss": "8.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "recharts": "2.15.3",
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
