--- a/front/package.json
+++ b/front/package.json
@@ -14,12 +14,16 @@
   "dependencies": {
     "@deemlol/next-icons": "0.1.9",
     "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/modifiers": "9.0.0",
+    "@dnd-kit/sortable": "10.0.0",
     "@gsap/react": "2.1.2",
+    "@hookform/resolvers": "5.0.1",
     "@radix-ui/react-avatar": "1.1.4",
+    "@radix-ui/react-checkbox": "1.2.3",
     "@radix-ui/react-collapsible": "1.1.4",
-    "@radix-ui/react-dialog": "1.1.7",
+    "@radix-ui/react-dialog": "1.1.11",
     "@radix-ui/react-dropdown-menu": "2.1.7",
-    "@radix-ui/react-label": "2.1.3",
+    "@radix-ui/react-label": "2.1.4",
     "@radix-ui/react-separator": "1.1.3",
     "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-tooltip": "1.2.0",
@@ -43,15 +47,18 @@
     "lucide-react": "0.503.0",
     "maath": "0.10.8",
     "next": "15.1.6",
+    "next-themes": "0.4.6",
     "postcss": "8.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "7.56.1",
     "recharts": "2.15.3",
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
     "three": "0.174.0",
-    "valtio": "2.1.3",
+    "vaul": "1.1.2",
+    "zod": "3.24.3",
     "zustand": "5.0.3"
   },
   "devDependencies": {
