--- a/back/package.json
+++ b/back/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "6.6.0",
     "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.7",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "4.x.x",
     "express-rate-limit": "7.5.0",
+    "express-session": "1.18.1",
     "helmet": "8.1.0",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
@@ -23,9 +25,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.2",
+    "@types/cookie-parser": "1.4.8",
     "@types/cors": "2.8.17",
     "@types/dotenv": "6.1.1",
     "@types/express": "5.0.1",
+    "@types/express-session": "1.18.1",
     "@types/jsonwebtoken": "9.0.9",
     "@types/morgan": "1.9.9",
     "@types/node-localstorage": "1.3.3",
