--- a/front/components.json
+++ b/front/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@app/components/ui/shadcn/components",
-    "utils": "@app/components/ui/shadcn/lib/utils",
-    "ui": "@app/components/ui/shadcn/components/ui",
-    "lib": "@app/components/ui/shadcn/lib",
-    "hooks": "@app/components/ui/shadcn/hooks"
+    "components": "@/components/shadcn/components",
+    "utils": "@/components/shadcn/lib/utils",
+    "ui": "@/components/shadcn/components/ui",
+    "lib": "@/components/shadcn/lib",
+    "hooks": "@/components/shadcn/hooks"
   },
   "iconLibrary": "lucide"
 }
