--- a/front/package.json
+++ b/front/package.json
@@ -47,9 +47,11 @@
     "lucide-react": "0.503.0",
     "maath": "0.10.8",
     "next": "15.1.6",
+    "next-cloudinary": "6.16.0",
     "next-themes": "0.4.6",
     "postcss": "8.5.1",
     "react": "19.0.0",
+    "react-daum-postcode": "3.2.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.56.1",
     "recharts": "2.15.3",
