--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-dialog": "1.1.11",
     "@radix-ui/react-dropdown-menu": "2.1.7",
     "@radix-ui/react-label": "2.1.4",
+    "@radix-ui/react-select": "2.2.4",
     "@radix-ui/react-separator": "1.1.3",
     "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-tooltip": "1.2.0",
@@ -54,6 +55,7 @@
     "react-daum-postcode": "3.2.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.56.1",
+    "react-select": "5.10.1",
     "recharts": "2.15.3",
     "sonner": "2.0.3",
     "tailwind-merge": "3.0.1",
