--- a/front/package.json
+++ b/front/package.json
@@ -18,12 +18,14 @@
     "@dnd-kit/sortable": "10.0.0",
     "@gsap/react": "2.1.2",
     "@hookform/resolvers": "5.0.1",
+    "@lottiefiles/dotlottie-react": "0.13.5",
     "@radix-ui/react-avatar": "1.1.4",
     "@radix-ui/react-checkbox": "1.2.3",
     "@radix-ui/react-collapsible": "1.1.4",
     "@radix-ui/react-dialog": "1.1.11",
     "@radix-ui/react-dropdown-menu": "2.1.7",
     "@radix-ui/react-label": "2.1.4",
+    "@radix-ui/react-progress": "1.1.6",
     "@radix-ui/react-select": "2.2.4",
     "@radix-ui/react-separator": "1.1.3",
     "@radix-ui/react-slot": "1.2.2",
@@ -39,6 +41,7 @@
     "axios": "1.8.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "date-fns": "3.6.0",
     "embla-carousel-autoplay": "8.6.0",
     "embla-carousel-react": "8.6.0",
     "framer-motion": "12.6.3",
@@ -59,7 +62,7 @@
     "recharts": "2.15.3",
     "sonner": "2.0.3",
     "tailwind-merge": "3.0.1",
-    "tailwind-prettier": "1.0.26",
+    "tailwind-prettier": "1.0.33",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
     "three": "0.174.0",
