--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@dnd-kit/sortable": "10.0.0",
     "@gsap/react": "2.1.2",
     "@hookform/resolvers": "5.0.1",
+    "@internationalized/date": "3.8.0",
     "@lottiefiles/dotlottie-react": "0.13.5",
     "@radix-ui/react-avatar": "1.1.4",
     "@radix-ui/react-checkbox": "1.2.3",
@@ -25,11 +26,12 @@
     "@radix-ui/react-dialog": "1.1.11",
     "@radix-ui/react-dropdown-menu": "2.1.7",
     "@radix-ui/react-label": "2.1.4",
+    "@radix-ui/react-popover": "1.1.13",
     "@radix-ui/react-progress": "1.1.6",
     "@radix-ui/react-select": "2.2.4",
     "@radix-ui/react-separator": "1.1.3",
     "@radix-ui/react-slot": "1.2.2",
-    "@radix-ui/react-tooltip": "1.2.0",
+    "@radix-ui/react-tooltip": "1.2.6",
     "@react-three/drei": "10.0.3",
     "@react-three/fiber": "9.0.4",
     "@tanstack/react-query": "5.74.3",
@@ -55,6 +57,7 @@
     "next-themes": "0.4.6",
     "postcss": "8.5.1",
     "react": "19.0.0",
+    "react-aria-components": "1.8.0",
     "react-daum-postcode": "3.2.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.56.1",
@@ -66,6 +69,7 @@
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
     "three": "0.174.0",
+    "usehooks-ts": "3.1.1",
     "vaul": "1.1.2",
     "zod": "3.24.3",
     "zustand": "5.0.3"
