--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "start": "NODE_ENV=production nodemon ./server.ts",
     "dev": "NODE_ENV=development nodemon ./server.ts"
   },
   "author": "",
