--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon ./server.ts",
+    "start": "node ./server.ts",
     "dev": "NODE_ENV=development nodemon ./server.ts"
   },
   "author": "",
